tests/positive/while.c
main() {
    int i;
    i = 8;

    while (i - 8)
        i = i - 1;
}
