tests/negative/no_main_function.c
func1()
{
    int a;
    a = 1;
    return a;
}
func2()
{
    int b;
    b = 2;
    func1();
}
